fix feature #72 : add "SSO Client"
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@381 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
@@ -50,6 +50,7 @@ MyInterestCenters = My subscriptions
 LatestPublications = The * latest publications
 QuickInfos = Quick info
 FileSharing = My tickets
+WebConnections = My connections
 
 HelpLaunchIE = Help on tools implementation
 HelpLaunchIEPage = HelpLaunchIE.jsp
