--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle_en.properties
@@ -31,3 +31,5 @@ EndOfSessionNotificationMsgText=If you don't reply, the system will end your ses
 administrator=Administrator
 passwordExpirationAlert=Imminent Password Expiration
 passwordExpirationMessage=Your password is about to be expired. Please change it as soon as possible.
+badCredentials=Bad credentials
+invalidAnswer=Answer is incorrect
