--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -101,3 +101,5 @@ WrongLength = Incorrect password length!
 NoSpacesInPassword = The password must not contain any blank spaces!
 
 PP.ChangeLookAlert = A personal look will only be applied to spaces with no set look 
+LoginQuestion = Question if password has been forgotten
+LoginAnswer = Answer to the question
