--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
@@ -100,3 +100,5 @@ WrongLength = La longueur du mot de passe est insuffisante !
 NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
 
 PP.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas imposé
+LoginQuestion = Question en cas d'oubli de mot de passe
+LoginAnswer = Réponse à la question
