--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
@@ -65,3 +65,4 @@ importExportPeas.toExport				= Export selected documents
 importExportPeas.ExportDuration			= Duration of export
 importExportPeas.FileSize				= File size to download
 importExportPeas.File					= File to download
+importExportPeas.InProgress				= Export in progress...
