--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_fr.properties
@@ -69,4 +69,5 @@ importExportPeas.ExportDuration			= Durée de l'exportation
 importExportPeas.FileSize				= Taille du fichier à télécharger
 importExportPeas.File					= Fichier à télécharger
 
+importExportPeas.InProgress				= Exportation en cours...
 
