--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
@@ -67,3 +67,5 @@ attachment.xmlForm.Edit = Edit additional informations
 attachment.xmlForm.View = More...
 attachment.xmlForm.ToolTip = Additional informations about  
 attachment.share = Share this file
+attachment.checkOutAndDownload = Lock and download
+attachment.checkOutAndEditOnline = Edit online
