--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_fr.properties
@@ -89,3 +89,13 @@ versioning.warning.checkin.locked.force=Forcer la libération
 versioning.xmlForm.View = Plus...
 versioning.xmlForm.XtraData = Informations complémentaires
 versioning.xmlForm.ToolTip = Informations complémentaires sur
+
+versioning.CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
+
+versioning.share = Partager ce fichier
+
+versioning.checkOutAndDownload = Réserver et télécharger
+versioning.checkOutAndEditOnline = Editer en ligne
+
+confirm.checkin.message=Voulez-vous enregistrer vos modifications ?
+versioning.checkin.abort=Abandonner mes modifications
