--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_en.properties
@@ -89,3 +89,12 @@ versioning.warning.checkin.locked.force=Force release
 versioning.xmlForm.View = More...
 versioning.xmlForm.XtraData = Additional informations
 versioning.xmlForm.ToolTip = Additional informations about
+versioning.CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
+
+versioning.share = Share this file
+
+versioning.checkOutAndDownload = Lock and download
+versioning.checkOutAndEditOnline = Edit online
+
+confirm.checkin.message=Do you want to save your changes ?
+versioning.checkin.abort=Abort my changes
