--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -91,10 +91,10 @@ Characters = caractères
 JSPP.MustBeginsByHTTP = doit contenir une URL débutant par http:// ou https://
 
 //messages
-JSPP.MessageSuppressionSpaceBegin = Etes-vous sur de vouloir supprimer cet espace ?\\n\\n-->
+JSPP.MessageSuppressionSpaceBegin = Etes-vous sûr(e) de vouloir supprimer cet espace ?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Etes-vous sur de vouloir supprimer les utilisateurs ?
-JSPP.MessageSuppressionInstanceBegin = Etes-vous sur de vouloir supprimer ce service ?\\n\\n-->
+JSPP.MessageSuppressionSpaceManager = Etes-vous sûr(e) de vouloir supprimer les utilisateurs ?
+JSPP.MessageSuppressionInstanceBegin = Etes-vous sûr(e) de vouloir supprimer ce service ?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 //onglets roles
