--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/templateDomainSQLBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/templateDomainSQLBundle_en.properties
@@ -21,6 +21,12 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-extraProperty1 = Extra data #1
-extraProperty2 = Extra data #2
-extraProperty3 = Extra data #3
+title         = Title
+company       = Company
+position      = Position
+boss          = Manager
+phone         = Phone
+homePhone     = Home phone
+fax           = Fax
+cellularPhone = Cellular phone
+address       = Address
