--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/templateDomainSQLBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/templateDomainSQLBundle_fr.properties
@@ -21,6 +21,12 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-extraProperty1 = Donnée paramétrable #1
-extraProperty2 = Donnée paramétrable #2
-extraProperty3 = Donnée paramétrable #3
+title         = Titre
+company       = Société
+position      = Service
+boss          = Responsable
+phone         = Téléphone
+homePhone     = Téléphone personnel
+fax           = Fax
+cellularPhone = Téléphone portable
+address       = Adresse
