--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -174,7 +174,7 @@ GML.yes							= Yes
 // window title
 GML.popupTitle						= ___/ Silverpeas&#153; - Collaborative Portal Organizer \_________________________________________
 
-GML.trademark						= &copy; 2001-2009 Silverpeas - All Rights Reserved
+GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - All rights reserved
 
 // Formulaire
 GML.thefield						= The field
