--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -42,8 +42,7 @@ Deactivate = Disable
 
 DragDrop = Enable Drag And drop
 
-OnlineEditing = Enable MS Office online editing
-WebdavEditing = Enable Webdav online editing
+WebdavEditing = Enable online editing
 WebdavEditing.installation = Webdav online editing plug-in.
 
 operationPane_addadress = Add a protocol
