--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
@@ -42,8 +42,7 @@ Deactivate = Désactiver
 
 DragDrop = Activer le glisser/déposer
 
-OnlineEditing = Activer l'édition directe des documents MS Office
-WebdavEditing = Activer l'édition directe avec Webdav
+WebdavEditing = Activer l'édition en ligne
 WebdavEditing.installation = Installation du module d'édition en ligne Webdav
 
 operationPane_addadress = Ajouter un canal de notification
