--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -111,6 +111,12 @@ JSPP.PlaceLast = Déplacer en fin
 JSPP.ComponentOrder = Déplacer le service
 JSPP.ComponentPlace = Déplacement avant le composant
 
+// position espace, composant
+JSPP.SpacePosition = Afficher les services
+JSPP.NoSpacePosition = Sélectionner la position
+JSPP.SpacePositionFirst = Après les sous-espaces
+JSPP.SpacePositionLast = Avant les sous-espaces
+
 // Deplacement de composant
 JSPP.SpaceIn = Déplacement dans l'espace
 JSPP.SpacesNotInMaintenance	= L'espace source et destination doivent être en maintenance...
