--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/multilang/graphicElementFactoryBundle_en.properties
@@ -21,6 +21,12 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-IconsPath = /util/viewGenerator/icons
-Pagination.NumberOfPagesAround=10
-Pagination.DisplayTotalNumberOfPages=true
+GEF.pagination.page = Page
+GEF.pagination.pageOn = &nbsp;of&nbsp;
+GEF.pagination.firstPage = First page
+GEF.pagination.previousPage = Previous page
+GEF.pagination.nextPage = Next page
+GEF.pagination.lastPage = Last page
+GEF.pagination.gotoPage = Go to page 
+GEF.pagination.jumptoPage = Jump to page...
+GEF.pagination.jumper = Page...
