closing feature #187 (dbbuilder scripts modified)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@888 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
@@ -43,3 +43,11 @@ lookSilverpeasV5.home = Home
 # Connected Users
 lookSilverpeasV5.connectedUser = connected user
 lookSilverpeasV5.connectedUsers = connected users
+
+lookSilverpeasV5.personalSpace.add = Add a component...
+lookSilverpeasV5.personalSpace.select = Select a component :
+lookSilverpeasV5.personalSpace.remove.confirm = Are you sure you want to permanently delete this component and everything it contains?
+lookSilverpeasV5.personalSpace.gallery = My pictures
+lookSilverpeasV5.personalSpace.rssAgregator = My RSS feeds
+lookSilverpeasV5.personalSpace.kmelia = My documents
+lookSilverpeasV5.personalSpace.yellowpages = My contacts
