--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -264,3 +264,5 @@ GML.ExportInProgress = Export in progress...
 
 GML.DragNDropExpand = Quick upload...
 GML.DragNDropCollapse = Close
+
+GML.personalSpace = Personal space
