--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -266,3 +266,5 @@ GML.ExportInProgress = Export en cours...
 
 GML.DragNDropExpand = Pour déposer rapidement un fichier...
 GML.DragNDropCollapse = Fermer
+
+GML.personalSpace = Espace personnel
