--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_fr.properties
@@ -44,3 +44,10 @@ lookSilverpeasV5.home = Accueil
 lookSilverpeasV5.connectedUser = autre utilisateur connecté
 lookSilverpeasV5.connectedUsers = autres utilisateurs connectés
 
+lookSilverpeasV5.personalSpace.add = Ajouter un composant...
+lookSilverpeasV5.personalSpace.select = Sélectionnez un composant :
+lookSilverpeasV5.personalSpace.remove.confirm = Etes-vous sûr(e) de vouloir supprimer définitivement ce composant et tout ce qu'il contient ?
+lookSilverpeasV5.personalSpace.gallery = Mes images
+lookSilverpeasV5.personalSpace.rssAgregator = Mes flux RSS
+lookSilverpeasV5.personalSpace.kmelia = Mes documents
+lookSilverpeasV5.personalSpace.yellowpages = Mes contacts
