closing feature #197 Add user favorite space with JSP <view:tabs> renderer
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@912 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_en.properties
@@ -51,3 +51,8 @@ lookSilverpeasV5.personalSpace.gallery = My pictures
 lookSilverpeasV5.personalSpace.rssAgregator = My RSS feeds
 lookSilverpeasV5.personalSpace.kmelia = My documents
 lookSilverpeasV5.personalSpace.yellowpages = My contacts
+
+#Favorite space labels
+lookSilverpeasV5.noFavoriteSpace = You haven't selected a favorite space.
+lookSilverpeasV5.favoriteSpace.tabAll = All
+lookSilverpeasV5.favoriteSpace.tabBookmarks = Favorite
