--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_fr.properties
@@ -51,3 +51,7 @@ lookSilverpeasV5.personalSpace.gallery = Mes images
 lookSilverpeasV5.personalSpace.rssAgregator = Mes flux RSS
 lookSilverpeasV5.personalSpace.kmelia = Mes documents
 lookSilverpeasV5.personalSpace.yellowpages = Mes contacts
+
+lookSilverpeasV5.noFavoriteSpace = Vous n'avez sélectionné aucun espace favori.
+lookSilverpeasV5.favoriteSpace.tabAll = Tous
+lookSilverpeasV5.favoriteSpace.tabBookmarks = Favoris
