closing feature #142 (dynamic values in wysiwyg)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@983 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_fr.properties
@@ -45,3 +45,4 @@ RequiredField = Obligatoire
 UploadTitle = Upload de fichier
 Valider = Valider
 Annuler = Annuler
+DynamicValues = Sélectionner un mot-clé
