--- a/config-core/src/main/config/silvertrace/messages/wysiwygMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/wysiwygMessages_en.properties
@@ -27,6 +27,7 @@ wysiwyg.DELETING_WYSIWYG_ATTACHMENTS_FAILED = Deleting of the attachments failed
 wysiwyg.NO_WYSIWYG_DOCUMENT_ASSOCIATED = No wysiwyg document with this publication
 wysiwyg.TARGET_DIRECTORY_ON_SERVER_DOES_NOT_EXIST = Destination directory unknown
 wysiwyg.DELETING_DIRECTORY_ON_SERVER_FAILED = Deleting directory failed
+wysiwig.
 
 # NEW NEW NEW
 #
@@ -34,3 +35,6 @@ wysiwyg.DELETING_FAILED  = Delete failed
 wysiwyg.EX_GET_ALL_PAGES_FAIL = Unable to get the pages of the website
 wysiwyg.EX_GET_ALL_IMAGES_FAIL = Unable to get the images of the website 
 wysiwyg.EXE_UPLOAD_FILE_FAILED = The upload if this image failed. 
+wysiwig.DRIVER_MISSING = An error occurred  during the connection initialization. The JDBC driver isn't in the classpath.
+wysiwig.CONNECTION_INIALIZATION_FAILED = An error occurred  during the connection initialization. The Pool information must be set.
+wysiwyg.DAO_INITILIZATION_FAILED = The recovery of information about dynamic value table failed. These information must be set correctly.
