--- a/config-core/src/main/config/silvertrace/messages/wysiwygMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/wysiwygMessages_fr.properties
@@ -34,4 +34,7 @@ wysiwyg.DELETING_FAILED  = Problème lors de la suppression
 wysiwyg.EX_GET_ALL_PAGES_FAIL = Problème lors de la récupération des pages
 wysiwyg.EX_GET_ALL_IMAGES_FAIL = Problème lors de la récupération des images 
 wysiwyg.EXE_UPLOAD_FILE_FAILED = Problème lors de l'upload de l'image
+wysiwig.DRIVER_MISSING = Une erreur c'est produite durant l'initialisation du pool de connexion. Le driver JDBC doit être dans le classpath
+wysiwig.CONNECTION_INIALIZATION_FAILED = Une erreur s'est produite durant la phase d'initialisation de la connexion à la base de données. Les informations de connexion à la base doivent être renseignées.
+wysiwyg.DAO_INITILIZATION_FAILED = La récupération  des informations concernant la table des valeurs dynamiques a échoué. Ces informations doivent être correctement renseignées dans le fichier de configuration.
   
