closing feature #250 Adding "suggestions" parameter to fields "text" and "url"
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@990 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -57,6 +57,7 @@ templateDesigner.url = URL connection
 templateDesigner.login = Login connection to the database
 templateDesigner.passwordDB = Password connection to the database
 templateDesigner.query = SQL search request
+templateDesigner.suggestions = Suggestions
 
 
 templateDesigner.addOption = Add this option
