--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -57,7 +57,7 @@ templateDesigner.url = URL de connexion
 templateDesigner.login = Login de connexion à la base
 templateDesigner.passwordDB = Mot de passe de connexion à la base
 templateDesigner.query = Requête SQL de recherche
-
+templateDesigner.suggestions = Suggestions
 
 templateDesigner.addOption = Ajouter cette option
 templateDesigner.updateOption = Modifier cette option
