--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -9,7 +9,7 @@
 # As a special exception to the terms and conditions of version 3.0 of
 # the GPL, you may redistribute this Program in connection with Free/Libre
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
-# FLOSS exception.  You should have recieved a copy of the text describing
+# FLOSS exception.  You should have received a copy of the text describing
 # the FLOSS exception, and it is also available here:
 # "http://repository.silverpeas.com/legal/licensing"
 #
@@ -21,18 +21,21 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-FrenchLanguage = Français
+
+FrenchLanguage = French
+GermanLanguage = Deutsch
 EnglishLanguage = English
-language_fr = Français
-language_en = Anglais
-PersonalizationTitleTab1 = Personalize > Preferences
-PersonalizationTitleTab2 = Personalize > Update my profile
+language_fr = French
+language_de = Deutsch
+language_en = English
+PersonalizationTitleTab1 = Customize > Preferences
+PersonalizationTitleTab2 = Customize > Update my profile
 
 FavoriteLanguage = Language
 FavoriteLook = Look
 Language = Language
 Look = Look
-DefaultWorkSpace = Default WorkSpace
+DefaultWorkSpace = Default workspace
 Preferences = Preferences
 Identity = Identity
 
