Unlock for online editing by platform admin
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1088 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_en.properties
@@ -23,7 +23,7 @@
 #
   type = Type
   fichierJoint = File to attach
-  liaisonTerminée = linked successfully
+  liaisonTermin\u00E9e = linked successfully
   nomVide = The filename must not be empty!
  fichierInexistant = This file does not exist!
  liaisonInaccessible = The file cannot be found
@@ -40,7 +40,8 @@ until = until
 confirm.checkin.message=Save your changes?
 
 Title = Title
-
+fermer=Close
+forcer=Force
 lier = Link
 
 downloadInProgress = Upload in progress...
