--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_fr.properties
@@ -21,18 +21,18 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-downloadInProgress = Téléchargement en cours...
-fichierJoint = Fichier à joindre
-liaisonTerminée = Liaison réussie
+downloadInProgress = T\u00E9l\u00E9chargement en cours...
+fichierJoint = Fichier \u00E0 joindre
+liaisonTermin\u00E9e = Liaison r\u00E9ussie
 liaisonInaccessible = Impossible de trouver le fichier
-nomVide = Le nom du fichier doit être renseigné.
+nomVide = Le nom du fichier doit \u00EAtre renseign\u00E9.
 fichierInexistant = Le fichier n'existe pas !
 Title = Titre
-Up = Déplacer vers le haut
-Down = Déplacer vers le bas
-checkOut = Réserver
-checkIn = Libérer
-readOnly = Réservé par
+Up = D\u00E9placer vers le haut
+Down = D\u00E9placer vers le bas
+checkOut = R\u00E9server
+checkIn = Lib\u00E9rer
+readOnly = R\u00E9serv\u00E9 par
 at = le
 until = jusqu'au
 
@@ -40,36 +40,37 @@ confirm.checkin.message=Voulez vous enregistrer vos modifications ?
 
 CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
 
-attachment.SameFileNameAlreadyCheckout = Vous avez déjà réservé un fichier portant le même nom !<br>Afin d'éviter d'écraser d'éventuelles modifications, vous ne pouvez pas réserver simultanément deux fichiers ayant le même nom.
+attachment.SameFileNameAlreadyCheckout = Vous avez d\u00E9j\u00E0 r\u00E9serv\u00E9 un fichier portant le m\u00EAme nom !<br>Afin d'\u00E9viter d'\u00E9craser d'\u00E9ventuelles modifications, vous ne pouvez pas r\u00E9server simultan\u00E9ment deux fichiers ayant le m\u00EAme nom.
 
 //------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
+//                  A mettre \u00E0 jour dans le multilang general                         //
 //------------------------------------------------------------------------------------//
 
 type = Type
 zip = Zipper
-uploadDate = Téléchargé le
-
+uploadDate = T\u00E9l\u00E9charg\u00E9 le
+fermer=Fermer
+forcer=Forcer
 lier = Lier
 
-attachment.notifSubjectLib = Fichier réservé : libéré
-attachment.notifSubjectExpiry = Fichier réservé : échéance demain
-attachment.notifSubjectAlert = Fichier réservé : arrive bientôt à échéance
-attachment.notifName = Le fichier réservé
-attachment.notifUserExpiry = arrive à échéance de réservation demain
-attachment.notifUserAlert = arrivera bientôt à échéance de réservation
-attachment.notifUserLib = est arrivé à échéance et a été libéré
+attachment.notifSubjectLib = Fichier r\u00E9serv\u00E9 : lib\u00E9r\u00E9
+attachment.notifSubjectExpiry = Fichier r\u00E9serv\u00E9 : \u00E9ch\u00E9ance demain
+attachment.notifSubjectAlert = Fichier r\u00E9serv\u00E9 : arrive bient\u00F4t \u00E0 \u00E9ch\u00E9ance
+attachment.notifName = Le fichier r\u00E9serv\u00E9
+attachment.notifUserExpiry = arrive \u00E0 \u00E9ch\u00E9ance de r\u00E9servation demain
+attachment.notifUserAlert = arrivera bient\u00F4t \u00E0 \u00E9ch\u00E9ance de r\u00E9servation
+attachment.notifUserLib = est arriv\u00E9 \u00E0 \u00E9ch\u00E9ance et a \u00E9t\u00E9 lib\u00E9r\u00E9
 
 attachment.suppressionWhichTranslations = Le fichier "*" que vous souhaitez supprimer dispose de plusieurs traductions.<br/>Que voulez-vous supprimer ?
-attachment.suppressionConfirmation = Etes-vous sûr(e) de vouloir supprimer le fichier "*" ?
+attachment.suppressionConfirmation = Etes-vous s\u00FBr(e) de vouloir supprimer le fichier "*" ?
 attachment.allTranslations = Toutes les traductions
 
-attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'édition en ligne.<br/>Veuillez le fermer avant de pouvoir le libérer.
+attachment.warning.checkin.locked=Le fichier est encore ouvert en mode d'\u00E9dition en ligne.<br/>Veuillez le fermer avant de pouvoir le lib\u00E9rer.
 
-attachment.xmlForm.Edit = Editer les informations complémentaires
+attachment.xmlForm.Edit = Editer les informations compl\u00E9mentaires
 attachment.xmlForm.View = Plus...
-attachment.xmlForm.ToolTip = Informations complémentaires sur 
+attachment.xmlForm.ToolTip = Informations compl\u00E9mentaires sur 
 attachment.share = Partager ce fichier
 
-attachment.checkOutAndDownload = Réserver et télécharger
+attachment.checkOutAndDownload = R\u00E9server et t\u00E9l\u00E9charger
 attachment.checkOutAndEditOnline = Editer en ligne
